# ezChatRoom

./: .gitignore  CMakeLists.txt  Project Structure Description.md  README.md  chatroom-skeleton-generation.md
client/: .clangd  CMakeLists.txt  qml.qrc
client/conf/: config.ini  logger.conf
client/qml/: main.qml  main.qml.md  resources.qrc
client/qml/components/: Avatar.qml  Avatar.qml.md  ContactItem.qml  ContactItem.qml.md  ConversationItem.qml  ConversationItem.qml.md  DialogHelper.qml  DialogHelper.qml.md  ImagePreviewer.qml  ImagePreviewer.qml.md  InputBar.qml  InputBar.qml.md  MessageBubble.qml  MessageBubble.qml.md  ProfilePopup.qml  SearchBar.qml  SearchBar.qml.md  TabBar.qml  TabBar.qml.md  Toast.qml  Toast.qml.md  qmldir
client/qml/dialogs/: AddFriendDialog.qml  AddFriendDialog.qml.md  ConfirmDialog.qml  ConfirmDialog.qml.md  FileTransferDialog.qml  FileTransferDialog.qml.md  GroupChatDialog.qml  GroupChatDialog.qml.md
client/qml/pages/: ChatPage.qml  ChatPage.qml.md  FriendRequestPage.qml  FriendRequestPage.qml.md  GroupChatCreatePage.qml  GroupChatCreatePage.qml.md  LoginPage.qml  LoginPage.qml.md  ProfilePage.qml  ProfilePage.qml.md  RegisterPage.qml  RegisterPage.qml.md  SettingsPage.qml  SettingsPage.qml.md
client/resources/: qml.qrc
client/src/: main.cpp  main.cpp.md
client/src/core/: AppManager.cpp  AppManager.h  AppManager.h.md  NavigationController.cpp  NavigationController.h  NavigationController.h.md  SessionManager.cpp  SessionManager.h  SessionManager.h.md  SettingsManager.cpp  SettingsManager.h  SettingsManager.h.md
client/src/crypto/: AESEncryptor.cpp  AESEncryptor.h  AESEncryptor.h.md  HashHelper.cpp  HashHelper.h  HashHelper.h.md  KeyManager.cpp  KeyManager.h  KeyManager.h.md  RSAEncryptor.cpp  RSAEncryptor.h  RSAEncryptor.h.md
client/src/database/: ConversationDAO.cpp  ConversationDAO.h  ConversationDAO.h.md  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager.h.md  MessageDAO.cpp  MessageDAO.h  MessageDAO.h.md  UserDAO.cpp  UserDAO.h  UserDAO.h.md
client/src/models/: ConversationModel.cpp  ConversationModel.h  ConversationModel.h.md  FriendRequestModel.cpp  FriendRequestModel.h  FriendRequestModel.h.md  MessageModel.cpp  MessageModel.h  MessageModel.h.md  UserModel.cpp  UserModel.h  UserModel.h.md
client/src/network/: HeartbeatManager.cpp  HeartbeatManager.h  HeartbeatManager.h.md  MessageHandler.cpp  MessageHandler.h  MessageHandler.h.md  PacketBuilder.cpp  PacketBuilder.h  PacketBuilder.h.md  TcpClient.cpp  TcpClient.h  TcpClient.h.md
client/src/qmlbridge/: AppCore.cpp  AppCore.h  AppCore.h.md  ChatController.cpp  ChatController.h  ChatController.h.md  ChatController.md  FileTransferController.cpp  FileTransferController.h  FileTransferController.h.md  FriendController.cpp  FriendController.h  FriendController.h.md  NotificationController.cpp  NotificationController.h  NotificationController.h.md  UserController.cpp  UserController.h  UserController.h.md
docs/: ChatPage开发指南.md  协议文档.md  团队分工方案.md  开发指南.md  角色A开发指南.md  部署说明.md  项目结构说明.md
sample/ChatRoom-Client-windows-x64-v2.1.0/: start_client.bat
server/: CMakeLists.txt
server/src/: main.cpp  main.cpp.md
server/src/core/: ClientSession.cpp  ClientSession.h  ClientSession.h.md  ConnectionPool.cpp  ConnectionPool.h  ConnectionPool.h.md  MessageRouter.cpp  MessageRouter.h  MessageRouter.h.md  SessionManager.cpp  SessionManager.h  SessionManager.h.md  TcpServer.cpp  TcpServer.h  TcpServer.h.md  ThreadPool.cpp  ThreadPool.h  ThreadPool.h.md
server/src/crypto/: AESEncryptor.cpp  AESEncryptor.h  AESEncryptor.h.md  AuthHelper.cpp  AuthHelper.h  AuthHelper.h.md  PasswordHasher.cpp  PasswordHasher.h  PasswordHasher.h.md  RSAEncryptor.cpp  RSAEncryptor.h  RSAEncryptor.h.md
server/src/database/: DatabasePool.cpp  DatabasePool.h  DatabasePool.h.md  FriendRepository.cpp  FriendRepository.h  FriendRepository.h.md  GroupRepository.cpp  GroupRepository.h  GroupRepository.h.md  MessageRepository.cpp  MessageRepository.h  MessageRepository.h.md  OfflineMessageManager.cpp  OfflineMessageManager.h  OfflineMessageManager.h.md  UserRepository.cpp  UserRepository.h  UserRepository.h.md
server/src/models/: FriendRelation.cpp  FriendRelation.h  FriendRelation.h.md  FriendRequest.cpp  FriendRequest.h  FriendRequest.h.md  Group.cpp  Group.h  Group.h.md  Message.cpp  Message.h  Message.h.md  User.cpp  User.h  User.h.md
(+26 files in other folders)
